wren.h

#define wren_h
#define WREN_VERSION_MAJOR 0
#define WREN_VERSION_MINOR 4
#define WREN_VERSION_PATCH 0
#define WREN_VERSION_STRING "0.4.0"
#define WREN_VERSION_NUMBER (WREN_VERSION_MAJOR * 1000000 + WREN_VERSION_MINOR * 1000 + WREN_VERSION_PATCH)
typedef struct WrenVM WrenVM;
typedef struct WrenHandle WrenHandle;
typedef void* (*WrenReallocateFn)(void* memory, size_t newSize, void* userData);
typedef void (*WrenForeignMethodFn)(WrenVM* vm);
typedef void (*WrenFinalizerFn)(void* data);
typedef const char* (*WrenResolveModuleFn)(WrenVM* vm,
    const char* importer, const char* name);
struct WrenLoadModuleResult;
typedef void (*WrenLoadModuleCompleteFn)(WrenVM* vm, const char* name, struct WrenLoadModuleResult result);
typedef struct WrenLoadModuleResult
{
  const char* source;
  WrenLoadModuleCompleteFn onComplete;
  void* userData;
} WrenLoadModuleResult;
typedef WrenLoadModuleResult (*WrenLoadModuleFn)(WrenVM* vm, const char* name);
typedef WrenForeignMethodFn (*WrenBindForeignMethodFn)(WrenVM* vm,
    const char* module, const char* className, bool isStatic,
    const char* signature);
typedef void (*WrenWriteFn)(WrenVM* vm, const char* text);
typedef enum
{
  WREN_ERROR_COMPILE,
  WREN_ERROR_RUNTIME,
  WREN_ERROR_STACK_TRACE
} WrenErrorType;
typedef void (*WrenErrorFn)(
    WrenVM* vm, WrenErrorType type, const char* module, int line,
    const char* message);
typedef struct
{
  WrenForeignMethodFn allocate;
  WrenFinalizerFn finalize;
} WrenForeignClassMethods;
typedef WrenForeignClassMethods (*WrenBindForeignClassFn)(
    WrenVM* vm, const char* module, const char* className);
typedef struct
{
  WrenReallocateFn reallocateFn;
  WrenResolveModuleFn resolveModuleFn;
  WrenLoadModuleFn loadModuleFn;
  WrenBindForeignMethodFn bindForeignMethodFn;
  WrenBindForeignClassFn bindForeignClassFn;
  WrenWriteFn writeFn;
  WrenErrorFn errorFn;
  size_t initialHeapSize;
  size_t minHeapSize;
  int heapGrowthPercent;
  void* userData;
} WrenConfiguration;
typedef enum
{
  WREN_RESULT_SUCCESS,
  WREN_RESULT_COMPILE_ERROR,
  WREN_RESULT_RUNTIME_ERROR
} WrenInterpretResult;
typedef enum
{
  WREN_TYPE_BOOL,
  WREN_TYPE_NUM,
  WREN_TYPE_FOREIGN,
  WREN_TYPE_LIST,
  WREN_TYPE_MAP,
  WREN_TYPE_NULL,
  WREN_TYPE_STRING,
  WREN_TYPE_UNKNOWN
} WrenType;
void wrenInitConfiguration(WrenConfiguration* configuration);
WrenVM* wrenNewVM(WrenConfiguration* configuration);
void wrenFreeVM(WrenVM* vm);
void wrenCollectGarbage(WrenVM* vm);
WrenInterpretResult wrenInterpret(WrenVM* vm, const char* module,
                                  const char* source);
WrenHandle* wrenMakeCallHandle(WrenVM* vm, const char* signature);
WrenInterpretResult wrenCall(WrenVM* vm, WrenHandle* method);
void wrenReleaseHandle(WrenVM* vm, WrenHandle* handle);
int wrenGetSlotCount(WrenVM* vm);
void wrenEnsureSlots(WrenVM* vm, int numSlots);
WrenType wrenGetSlotType(WrenVM* vm, int slot);
bool wrenGetSlotBool(WrenVM* vm, int slot);
const char* wrenGetSlotBytes(WrenVM* vm, int slot, int* length);
double wrenGetSlotDouble(WrenVM* vm, int slot);
void* wrenGetSlotForeign(WrenVM* vm, int slot);
const char* wrenGetSlotString(WrenVM* vm, int slot);
WrenHandle* wrenGetSlotHandle(WrenVM* vm, int slot);
void wrenSetSlotBool(WrenVM* vm, int slot, bool value);
void wrenSetSlotBytes(WrenVM* vm, int slot, const char* bytes, size_t length);
void wrenSetSlotDouble(WrenVM* vm, int slot, double value);
void* wrenSetSlotNewForeign(WrenVM* vm, int slot, int classSlot, size_t size);
void wrenSetSlotNewList(WrenVM* vm, int slot);
void wrenSetSlotNewMap(WrenVM* vm, int slot);
void wrenSetSlotNull(WrenVM* vm, int slot);
void wrenSetSlotString(WrenVM* vm, int slot, const char* text);
void wrenSetSlotHandle(WrenVM* vm, int slot, WrenHandle* handle);
int wrenGetListCount(WrenVM* vm, int slot);
void wrenGetListElement(WrenVM* vm, int listSlot, int index, int elementSlot);
void wrenSetListElement(WrenVM* vm, int listSlot, int index, int elementSlot);
void wrenInsertInList(WrenVM* vm, int listSlot, int index, int elementSlot);
int wrenGetMapCount(WrenVM* vm, int slot);
bool wrenGetMapContainsKey(WrenVM* vm, int mapSlot, int keySlot);
void wrenGetMapValue(WrenVM* vm, int mapSlot, int keySlot, int valueSlot);
void wrenSetMapValue(WrenVM* vm, int mapSlot, int keySlot, int valueSlot);
void wrenRemoveMapValue(WrenVM* vm, int mapSlot, int keySlot,
                        int removedValueSlot);
void wrenGetVariable(WrenVM* vm, const char* module, const char* name,
                     int slot);
bool wrenHasVariable(WrenVM* vm, const char* module, const char* name);
bool wrenHasModule(WrenVM* vm, const char* module);
void wrenAbortFiber(WrenVM* vm, int slot);
void* wrenGetUserData(WrenVM* vm);
void wrenSetUserData(WrenVM* vm, void* userData);